# newstrend

./: .env.example  .gitignore  CLAUDE.md  README.md  VALIDATION.md  audit_report.md  master.jsonl  pyproject.toml  requirements.txt
.claude/: settings.json
config/: entities_aliases.json  entities_stopwords.txt  extra_noise.txt  extra_noise.txt.bak  prices_tickers.txt  publisher_blacklist.txt  publisher_weights.json  ticker_aliases.json  ticker_to_cik.json  topic_lexicon.yaml  trend_runner.yaml
configs/: stopwords_en.txt
data/: local_runs.json
docs/: TODO.md
experiments/: results.json
page_art/: artifact.tar
page_debug/: index.html  report.html
reports/: cumulative.html  latest.html
run/: backtest_results.json  backtest_summary.csv  backtest_trades.csv  ta_AAPL.csv  ta_AMD.csv  ta_AMZN.csv  ta_ASML.csv  ta_AVGO.csv  ta_BAC.csv  ta_BLK.csv  ta_CVX.csv  ta_DIA.csv  ta_GLD.csv  ta_GOOGL.csv  ta_GS.csv  ta_HYG.csv  ta_INTC.csv  ta_IWM.csv  ta_JPM.csv  ta_META.csv  ta_MS.csv  ta_MSFT.csv  ta_MU.csv  ta_NVDA.csv  ta_NXPI.csv  ta_QCOM.csv  ta_QQQ.csv  ta_SPY.csv  ta_TLT.csv  ta_TSLA.csv  ta_USO.csv  ta_XOM.csv  tokens_by_day.cleaned.csv
scripts/: adaptive_calibration.py  add_silver_to_warehouse.py  aggregate.py  aggregate_from_warehouse.py  aggregate_ticker_sentiment.py  analyze_pairs.py  analyze_prices.py  analyze_ticker.py  auto_pipeline.py  backfill_auto_pipeline.py  backtest.py  backtest_v2.py  benchmark.py  build_entities_daily.py  build_fundamentals.py  build_signal_corr.py  build_static_ui.py  collect_rss.py  collect_shifted.py  cooccur_graph.py  (+55 more)
(+4683 files in other folders)
